--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
 debathena-maybe-ubufox (1.1) UNRELEASED; urgency=low
 
+  [ Jonathan Reed ]
   * Bump debian/compat to 6
   * Switch from control.in to control (Trac: #561)
   * Bump Standards-Version to 3.9.3
   * Bump compat level to 7
+
+  [ Anders Kaseorg ]
+  * Switch to source format 3.0 (native).
 
  -- Jonathan Reed <jdreed@mit.edu>  Wed, 03 Apr 2013 13:40:12 -0400
 
