--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debathena-maybe-ubufox (1.1) UNRELEASED; urgency=low
+debathena-maybe-ubufox (1.1) unstable; urgency=low
 
   [ Jonathan Reed ]
   * Bump debian/compat to 6
@@ -10,7 +10,7 @@ debathena-maybe-ubufox (1.1) UNRELEASED; urgency=low
   * Switch to source format 3.0 (native).
   * Add debian/gbp.conf.
 
- -- Jonathan Reed <jdreed@mit.edu>  Wed, 03 Apr 2013 13:40:12 -0400
+ -- Anders Kaseorg <andersk@mit.edu>  Sun, 13 Nov 2016 22:01:49 -0500
 
 debathena-maybe-ubufox (1.0) unstable; urgency=low
 
